Release 1.12:
- Fix x86-32 compilation error and improve detection of AES-NI for x86
  processors (Jeremie Dimino, Etienne Millon)
  (Closes: #1646)
- AES-NI: align key_schedule on a 16 byte boundary (Etienne Millon)
  (Closes: #1709)
- Add original Keccak submission to SHA-3 (Yoichi Hirai)

Release 1.11:
- Adapt to "safe string" mode (OCaml 4.02 and later required).
  The API should remain backward-compatible for clients compiled
  in "unsafe string" mode.  
- Update SHA-3 to the official NIST standard (different padding than
  in the Keccak submission).  (Closes: #1528)
- Fixed bounds checking in "add_substring" methods of hash functions
  and other functions that operate on a substring of a string.
  (Closes: #1480)
- Use hardware implementation of AES when available on x86 processors.
  (Faster than the software implementation and less sensitive to
   side channel attacks.)
- Use the Zarith library to implement RSA.
  (Faster than the previous implementation and less sensitive to
   side channel attacks.)
- Support the hardware random number generator present in recent
  x86 processors.
- Rebuilt generated files with Oasis 0.4.6 for OCaml 4.03 compatibility.

Release 1.10:
- Add all SHA-2 hash functions: SHA-224, SHA-384 and SHA-512 
  in addition to the existing SHA-256.  (Closes: #1223)
- Add support for CTR (Counter) chaining mode.
- Fix compilation error with OCaml 4.03+dev.
- Avoid using some obsolete OCaml stdlib functions.

Release 1.9:
 - More fixes to build in Windows with zlib (mingw and msvc).

Release 1.8:
 - Build .cmxs with C bindings (Closes: #1303)
 - Use advapi32 on Windows (Close: #1055)
 - Allow to define --zlib-include and --zlib-libdir if zlib is not installed in
   the standard location.

Release 1.7:
- Added SHA-3 hash function.

Release 1.6:
- Regenerate setup.ml with oasis 0.3.0~rc6 version

Release 1.5:
- Fix bug check in buffered_output#ensure_capacity (Closes: #879)
- Allow to have padding in Base64 (Closes: #897)

Release 1.4: