@@ -1,7 +1,7 @@
 (* setup.ml generated for the first time by OASIS v0.4.6 *)
 
 (* OASIS_START *)
-(* DO NOT EDIT (digest: 924b717b9b76d9bf10d4cc12d81efc8c) *)
+(* DO NOT EDIT (digest: 623485cf060b9e20675669ecdfc3ddd2) *)
 (*
    Regenerated by OASIS v0.4.10
    Visit http://oasis.forge.ocamlcore.org for more information and
@@ -7051,7 +7051,7 @@ let setup_t =
        {
           oasis_version = "0.3";
           ocaml_version = None;
-          version = "1.12";
+          version = "1.13";
           license =
             OASISLicense.DEP5License
               (OASISLicense.DEP5Unit
@@ -7293,7 +7293,10 @@ let setup_t =
                            "stubs-zlib.c";
                            "keccak.h";
                            "keccak.c";
-                           "stubs-sha3.c"
+                           "stubs-sha3.c";
+                           "chacha20.h";
+                           "chacha20.c";
+                           "stubs-chacha20.c"
                         ];
                       bs_data_files = [];
                       bs_findlib_extra_files = [];
@@ -7917,7 +7920,8 @@ let setup_t =
        };
      oasis_fn = Some "_oasis";
      oasis_version = "0.4.10";
-     oasis_digest = Some "\244\194\194\027\015B\182\240M~r\143n\137\017\166";
+     oasis_digest =
+       Some "\181\155\171\174N_\237\r\162G\133\253\183\165\234\250";
      oasis_exec = None;
      oasis_setup_args = [];
      setup_update = false
@@ -7925,7 +7929,7 @@ let setup_t =
 
 let setup () = BaseSetup.setup setup_t;;
 
-# 7929 "setup.ml"
+# 7933 "setup.ml"
 let setup_t = BaseCompat.Compat_0_3.adapt_setup_t setup_t
 open BaseCompat.Compat_0_3
 (* OASIS_STOP *)
