@@ -1,6 +1,6 @@
 # OASIS_START
-# DO NOT EDIT (digest: 8c7dbd8eb6cf5ccf6ede6d77d6b00869)
-version = "1.12"
+# DO NOT EDIT (digest: 7cb4f4b2e0b5e77bb7a0ee261fd36f90)
+version = "1.13"
 description = "Cryptographic primitives"
 requires = "unix zarith"
 archive(byte) = "cryptokit.cma"
