@@ -1,3 +1,5 @@
+- Add the Chacha20 stream cipher.
+
 Release 1.12:
 - Fix x86-32 compilation error and improve detection of AES-NI for x86
   processors (Jeremie Dimino, Etienne Millon)
